# ta2-minmod-kg

./: .coveragerc  .gitignore  README.md  config.yml.template  docker-compose.yml  env.template  etl.yml  pyproject.toml  pytest.ini  setup.sh  start.sh
containers/backend/: Dockerfile
containers/blazegraph/: Dockerfile  blazegraph.properties  data_loader.py  start.sh
containers/etl/: Dockerfile
containers/fuseki/: Dockerfile  config.ttl  dataloader.sh  shiro.ini  test.sh  test_config.ttl  users
containers/fuseki/mytdb/: mytdbloader  mytdbloader.java
containers/fuseki/mytdb2/: compile.sh  mytdbloader  mytdbloader.java
containers/nginx/: nginx.conf
containers/postgres/: Dockerfile
containers/virtuoso/: Dockerfile  data_loader.py  make_config.py  setup.sql  virtuoso.ini.template
deployment/: cronTTLGenerationInVM.sh
deprecated/deployment/: cronTTLGenerationInVM.sh
deprecated/generator/: model_mineral_site.yml  model_mineral_system_v2.yml
extractors/: category.yml  commodity.yml  country.yml  deposit_type.yml  epsg.yml  material_form.yml  mineral_site.yml  mineral_system.yml  same_as.yml  source.yml  source_score.yml  state_or_province.yml  state_or_province_new.yml  unit.yml
generator/: deposit_type_model.yml  merge_ttls_in_folder.py  model.yml  model_file_with_debug_comments.yml  model_mineral_site.yml  model_mineral_system.yml  model_mineral_system_v2.yml
generator/entities/commodities/: model_commodities.yml
generator/entities/depositTypes/: model_deposits.yml
generator/entities/sameAs/: same_as.yml
generator/entities/units/: model_units.yml
minmodapi/: README.md  pyproject.toml
minmodapi/minmodapi/: __init__.py  __main__.py
minmodapi/tests/: test_api.py
minmodkg/: api.py  config.py  entity_linking.py  fuseki_deployment.py  grade_tonnage_model.py  misc.py  query_service.py  transformations.py  typing.py  validators.py
minmodkg/api/: __main__.py  dependencies.py  main.py
minmodkg/api/internal/: admin.py
minmodkg/api/models/: create_mineral_site.py  (+7 more)
minmodkg/etl/: blazegraph.py  dedup_site.py  fuseki.py  fuseki_deployment.py  kgrel_entity.py  mineral_site.py  mineral_site_view.py  postgres.py  same_as.py  source.py  virtuoso.py
minmodkg/extractors/: .gitignore
minmodkg/integrations/: cdr.ipynb  cdr.py  cdr_helper.py
minmodkg/misc/: __init__.py  deserializer.py  exceptions.py  geo.py  prefix_index.py  rdf_store.py  sparql.py  utils.py
minmodkg/models/: base.py  candidate_entity.py  crs.py  dedup_mineral_site.py  deposit_type.py  derived_mineral_site.py  location_info.py  material_form.py  mineral_inventory.py  mineral_site.py  page_info.py  reference.py  source.py
minmodkg/schema/: make_diagram.py  make_shapes.py
minmodkg/services/: kgrel_entity.py  linking.py  mineral_site.py  mineral_site_v2.py  sync.py  wal_service.py
schema/: ONTOLOGY_EXTENSION_DIAGRAM.md  README.md  make_diagram.py  ontology.ttl  shapes.ttl  update.sh
tests/: conftest.py  test_api.py  test_grade_tonnage_model.py  test_misc.py  test_validators.py  utils.py
tests/api/: conftest.py  test_api.py  test_mineral_site.py
tests/misc/: test_rdf_store.py  test_sparql.py
tests/models/: test_mineral_site.py
tests/resources/: .env  .gitignore  config.yml  kgversion.ttl
tests/services/: test_mineral_site_service.py
validators/: create_ttl_files.py  generate_file_with_id.py  generate_uris.py  get_file_from_lfs.py  lfs_file_download.py  requirements.txt  test.ttl  update_deposit_type.py  validate_pyshacl.py  validate_pyshacl_on_file.py  validate_schema_github_actions.py  validate_schema_json.py  validator_utils.py
(+152 files in other folders)
