[tool.poetry]
name = "minmodapi"
version = "1.3.2"
description = "Client API for the MinMod API"
authors = ["Binh Vu <bvu687@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.28.1"
python-slugify = "^8.0.4"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
